Fix misleading comment in RunLoop.h https://bugs.webkit.org/show_bug.cgi?id=167832

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-02-10
Reviewed by Sam Weinig.

* wtf/RunLoop.h:
Mac initialization used to force using CFRunLoopGetMain(). Now however it just
uses RunLoop::current which uses CFRunLoopGetCurrent(). So this comment that
it can be done on any thread is misleading and can lead to incorrect behavior
if it is actually done on a non-main thread on Mac.

Canonical link: https://commits.webkit.org/185180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212139 268f45cc-cd09-0410-ab3c-d52691b4dbfc