Source/WTF/wtf/RunLoop.h
@@ -50,8 +50,7 @@ namespace WTF {
 class RunLoop : public FunctionDispatcher {
     WTF_MAKE_NONCOPYABLE(RunLoop);
 public:
-    // Must be called from the main thread (except for the Mac platform, where it
-    // can be called from any thread).
+    // Must be called from the main thread.
     WTF_EXPORT_PRIVATE static void initializeMainRunLoop();
 
     WTF_EXPORT_PRIVATE static RunLoop& current();
